--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="button-continer">
         <!-- Bottom filter and load buttons -->
         <button id="showOfferBtn" class="bottom-btn left-btn">
-          Show Offer: OFF
+          Filter Offers
         </button>
         <button id="loadMoreBtn" class="bottom-btn right-btn" disabled>
           Load More
