--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Product Explorer</title>
+    <title>Winkit - shows you the best Blinkit deals near you.</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap"
@@ -49,6 +49,12 @@
           Load More
         </button>
       </div>
+    </div>
+    <div class="footer-wrapper">
+      <p>
+        Winkit is a Blinkit quick-commerce wrapper that lets you filter all
+        current offers based on your location.
+      </p>
     </div>
     <script src="utility.js"></script>
     <script src="script.js"></script>
