mobile app description added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
             <div id="suggestions" class="suggestions"></div>
           </div>
         </nav>
-        <main class="content" id="content"></main>
+        <main class="content" id="content">
+          <div class="app-description" id="app-description">
+            <p>
+              Winkit is a Blinkit quick-commerce wrapper that lets you filter
+              all current offers based on your location.
+            </p>
+          </div>
+        </main>
       </div>
       <div class="button-continer">
         <!-- Bottom filter and load buttons -->
