handling user disallow location permission

--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
         </button>
       </div>
     </div>
+
+    <div id="imagePopup" class="popup-overlay">
+      <div class="popup-content">
+        <span class="close-btn">&times;</span>
+        <img
+          src="./permission.png"
+          alt="location permission setting"
+          class="popup-image"
+        />
+      </div>
+    </div>
     <div class="footer-wrapper">
       <p>
         Winkit is a Blinkit quick-commerce wrapper that lets you filter all
